--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -9,11 +9,11 @@
 
 <section class="logo-container">
   <div class="cat-container">
-    <img src="{% static 'images/splash.svg' %}" alt="The Cat Collector Cat" />
+    <img src="" alt="" />
   </div>
   <img 
-    src="{% static 'images/logotype.svg' %}" 
-    alt="Text reads: Cat Collector"
+    src="{% static 'images/signin_home_stock.jpeg' %}" 
+    alt="Text reads: Market Maker"
   />
 </section>
 {% if not user.is_authenticated %}
