--- a/main_app/templates/registrations/login.html
+++ b/main_app/templates/registrations/login.html
@@ -9,11 +9,11 @@
 
 <section class="logo-container">
   <div class="cat-container">
-    <img src="{% static 'images/splash.svg' %}" alt="The Cat Collector Cat" />
+    <img src="" alt="The Cat Collector Cat" />
   </div>
   <img 
-    src="{% static 'images/logotype.svg' %}" 
-    alt="Text reads: Cat Collector"
+    src="" 
+    alt="MarketShuffle"
   />
 </section>
 {% if not user.is_authenticated %}
