--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -255,7 +255,7 @@ nav li {
 
     nav,
     .header-logo-container {
-      background: rgba(104, 197, 248, .6);
+      background: rgba(202, 18, 18, 0.9);
       -webkit-backdrop-filter: blur(3px);
       backdrop-filter: blur(3px);
     }
