--- a/main_app/templates/stocks/index.html
+++ b/main_app/templates/stocks/index.html
@@ -28,6 +28,7 @@
               <img 
                 src="{% static 'images/wallstreet_bull.jpeg' %}" 
                 alt="wallstreet bull"
+                class="usr-img"
               >
             {% endif %}
           </div>
