--- a/main_app/templates/main_app/client_form.html
+++ b/main_app/templates/main_app/client_form.html
@@ -19,7 +19,7 @@
   <table>
     {{ form.as_table }}
   </table>
-  <button type="submit" class="btn submit">Submit!</button>
+  <button type="submit" class="btn submit">Submit</button>
 </form>
 
 {% endblock %}
