--- a/main_app/templates/stocks/detail.html
+++ b/main_app/templates/stocks/detail.html
@@ -166,7 +166,7 @@
         {% endfor %}
       {% else %}
         <p class="all-clients">
-          {{stock.name}} has all available clients
+          No more clients
         </p>
       {% endif %}
     </div>
