--- a/main_app/templates/main_app/client_confirm_delete.html
+++ b/main_app/templates/main_app/client_confirm_delete.html
@@ -5,7 +5,7 @@
 
 <div class="page-header">
   <h1>Delete client?</h1>
-  <img src="{% static 'images/nerd-cat.svg' %}" alt="A cat using a computer"/>
+  <img src="{% static '' %}" alt=""/>
 </div>
 <h2>Are you sure you want to delete {{ object.name }}?</h2>
 
