--- a/main_app/templates/main_app/client_list.html
+++ b/main_app/templates/main_app/client_list.html
@@ -13,17 +13,27 @@
 
 <section class="page-header">
   <h1>All MarketShuffle Clients</h1>
-  {% comment %}
-  <img src="{% static 'images/string.svg' %}" alt="A ball of string" />
-  <img src="{% static 'images/mouse.svg' %}" alt="A mouse" />
-  <img src="{% static 'images/post.svg' %}" alt="A scratching post" />
-  <img src="{% static 'images/fish.svg' %}" alt="A fishy client" />
-  {% endcomment %}
+  
 </section>
 
 <section class="card-container">
   {% for client in client_list %}
   <div class="card" style="border-color: {{ client.color }}">
+    <div class="stock-img">
+      {% if client.photo.url %}
+        <img 
+          src="{{stock.photo.url}}" 
+          alt="A photo of {{stock.name}}"
+          class="usr-img"
+        >
+      {% else %}
+      <img 
+      src="https://imgur.com/haYHZY3" 
+      alt="worried trader"
+      class="usr-img"
+    >
+      {% endif %}
+    </div>
     <div class="card-bg" style="background-color: {{ client.color }}"></div>
     <a href="{% url 'clients_detail' client.id %}">
       <div class="card-content">
