--- a/main_app/static/css/stock-detail.css
+++ b/main_app/static/css/stock-detail.css
@@ -18,6 +18,9 @@
 
 .stock-details {
   width: 98%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .stock-actions {
@@ -79,9 +82,9 @@
 
 .stock-details h2 {
   font-size: var(--font-xl);
-  margin: 0 0 10px;
-  margin-top: 0;
-  margin-bottom: 10px;
+  margin: 10px;
+  /* margin-top: 0;
+  margin-bottom: 10px; */
 }
 
 .stock-details h3 {
