--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -22,14 +22,14 @@
 </head>
 <body>
   <header>
-    <div class="header-logo-container">
+    {% comment %} <div class="header-logo-container">
       <a href="/">
         <img 
           src="" 
           alt=""
         >
       </a>
-    </div>
+    </div> {% endcomment %}
     <nav>
       <ul>
         
