CharField for market_cap

--- a/main_app/templates/stocks/detail.html
+++ b/main_app/templates/stocks/detail.html
@@ -49,7 +49,7 @@
     
       <h2>Purchase Price: {{stock.purchase_price}}</h2>
 
-      <h2>Volume: {{stock.volume}}
+      <h2>Market Cap: {{stock.market_cap}}
       <a href="{% url 'stocks_update' stock.id %}" class="btn warn">Edit</a>
       <a href="{% url 'stocks_delete' stock.id %}" class="btn danger">Delete</a>
     
