index market_cap card

--- a/main_app/templates/stocks/index.html
+++ b/main_app/templates/stocks/index.html
@@ -38,7 +38,7 @@
           {% comment %} {% else %} {% endcomment %}
             <p>purchase price: {{stock.purchase_price}}</p>
           {% comment %} {% endif %} {% endcomment %}
-          <p>volume: {{stock.volume}}</p>
+          <p>market cap: {{stock.market_cap}}</p>
         </div>
       </a>
     </div>
